fix task JavaScript/01

--- a/JavaScript/01/network-08.html
+++ b/JavaScript/01/network-08.html
@@ -5,7 +5,7 @@
   <title>JavaScript</title>
 </head>
 <body>
-  <h1>課題</h1>
+  <h1>課題 (改)</h1>
   <p>ソースを編集して解答すること。</p>
   <hr>
   
@@ -31,7 +31,7 @@
     </script>
   </p>
   
-  <h2>Q2. Hello World! の 4 文字目を答えよ。</h2>
+  <h2>Q2. Hello World! の 6 文字目を答えよ。</h2>
   <p>A.
     <script>
       // String の問題
@@ -59,11 +59,14 @@
     </script>
   </p>
   
-  <h2>Q5. Hello World! の 4 文字目を答えよ。</h2>
+  <h2>Q5. りんごを取り出せ。(出力する)</h2>
   <p>A.
     <script>
       // Object の問題
-      var hello = "Hello World!";
+      var obj = {
+        animals: arr,
+        fruits: ["いちご", "みかん", "りんご", "なし"]
+      };
       
       document.write(/*このコメントを削除して、コードを入力する*/);
     </script>
